# momentum-library-api

./: .env.example  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: config.py  database.py  main.py  models.py  schemas.py
app/routers/: books.py
scripts/: smoke_test.sh  up_with_smoke.ps1
tests/: conftest.py  test_books.py
