[project]
name = "momentum-library-api"
version = "0.1.0"
description = "Simple Library API – books inventory and lending status."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.32,<1",
    "sqlalchemy>=2.0,<3",
    "psycopg[binary]>=3.2,<4",
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.6,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "httpx>=0.28,<1",
    "ruff>=0.8,<1",
    "black>=24.10,<25",
]

[tool.ruff]
target-version = "py312"
line-length = 88
lint.select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]
lint.ignore = ["B008"]

[tool.black]
target-version = ["py312"]
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
